Address large-course-roster gotchas in refreshParticipants
Four issues that only surface at scale (a huge course's full roster sync),
found during review after fixing the lms_user_batch lock-timeout bug:

1. refreshParticipants' own participant/lti-user matching-and-saving loop had
   the exact same problem just fixed for lms_user_batch: one uncommitted
   transaction held for the whole multi-page sync. Moved that per-page work
   into a new ParticipantRosterWriteService, committing independently per
   page (REQUIRES_NEW), mirroring LmsUserBatchWriteService. The shared
   consent-reset logic moved to a static ParticipantConsentUtils so the new
   service doesn't need to depend back on ParticipantService (would create a
   circular bean dependency).

2. The per-context lock serializing concurrent roster syncs was a JVM-local
   ConcurrentHashMap - it only serializes callers within one app instance,
   and never evicts entries. Replaced with a real DB row lock
   (LtiContextRepository.findByContextIdForUpdate, PESSIMISTIC_WRITE), which
   works across instances and needs no cleanup. Since the lock is now held
   for the whole method, a failed sync simply never reaches the
   success-path write to last_participant_sync - no separate restore-on-
   failure logic needed anymore (and none would be safe here: a REQUIRES_NEW
   restore would self-deadlock against the still-held row lock).

3. The shared LTI Advantage RestTemplate had no connect/read timeout - a
   slow/hung LMS response partway through a 1000+-page fetch could block a
   thread indefinitely instead of failing cleanly. Added configurable
   app.lti.advantage.connect.timeout.ms/read.timeout.ms (defaults 10s/30s),
   applied via @PostConstruct since the shared RestTemplate field is
   constructed before Spring populates @Value fields.

4. Creating a new participant looked up its LtiUserEntity one query per user
   - for a huge course's first sync, where most users are new, that's on the
   order of 100k indiv